tests/paczka1/fuzzy1/20518252.err
Error in line 3: CURtKN7Tl2 A218 28,3
Error in line 19: yopL A74 31,2
Error in line 26: yopL A882 50,3
Error in line 9: s27Fn A74 147,8
Error in line 17: A882 A882 17,6
